--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="css/style.css" rel="stylesheet">
+        <title>Stock Report</title>
+        <meta charset="utf-8">
+        <link type="text/css" href="static/css/style.css" rel="stylesheet">
     </head>
     <body>
-        <input type="text" value="10" name="Number of Stocks"/>
-        <div id="wrap-button">
-            <button id="dispaly-stocks">Display</button>
+        <div id=searchProp>
+            <form method="GET" action="search_stock">
+                <input id="searchBox" type="text" placeholder="Name of the Stock" name="name"/>
+                <button id="searchButton" type="submit">Search</button>
+            </form>
         </div>
         <div id="stock-data">
-            <table>
+            <table id="stock-table" align="center">
                 <tr>
                     {% for field in fields %}
                     <th>{{field}}</th>
                     {% endfor %}
                 </tr>
-                {% for num in names %}
+                {% for data in stock_data[:count] %}
                 <tr>
-                    {% for data in stock_data[num] %}
-                    <th>{{data}}</th>
+                    {% for field in fields %}
+                    <td>{{data[field]}}</td>
                     {% endfor %}
                 </tr>
                 {% endfor %}
