Added detailed README.md

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <link type="text/css" href="static/css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div id=searchProp>
+        <div id="searchProp">
             <form method="GET" action="search_stock">
                 <input id="searchBox" type="text" placeholder="Name of the Stock" name="name"/>
                 <button id="searchButton" type="submit">Search</button>
